Backend connectat amb Base de dades correctament

--- a/webapp/src/app/taula-prediccions/taula-prediccions.component.html
+++ b/webapp/src/app/taula-prediccions/taula-prediccions.component.html
@@ -1,5 +1,6 @@
 <div class="mainContainer">
   <h1>Predicció de consum</h1>
+  result: {{result}}
   <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="zona.nom">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Zona</th>
