--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -32,3 +32,15 @@ h1{
    border-radius: 8px !important;
     overflow:hidden !important;
 }
+
+.entireDiv{
+  width: 100%;
+  height: calc(100% - 50px);
+}
+
+.botoDefault{
+  color: #F5E9E9 !important;
+  background-color: #9cadde !important;
+  border-radius: 16px !important;
+  padding: 16px !important;
+}
