--- a/webapp/src/app/settings/settings.component.html
+++ b/webapp/src/app/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div class="mainContainer">
-  <h1>Models passats</h1>
+  <h1>Nou entrenament</h1>
   <div class="entireDiv">
     <div class="divForPrompt">
 
