--- a/webapp/src/app/passats/models-passats.component.html
+++ b/webapp/src/app/passats/models-passats.component.html
@@ -1,28 +1,48 @@
-<!--<div class="mainContainer" *ngIf="loading === 0">-->
-<!--  <h1>Models passats</h1>-->
-<!--  <div class="contenidorCol">-->
-<!--    <div class="modelPassatMainCont" *ngFor="let model of models">-->
-<!--      <div class="columnaModel" style="font-weight: 600 !important; color: #47628f">-->
-<!--        Model {{ model.id }}-->
-<!--      </div>-->
-<!--      <div class="columnaModel">-->
-<!--        {{ model.dia | date: 'dd/MM/yyyy HH:mm' }}-->
-<!--      </div>-->
-<!--      <div class="columnaModel">-->
-<!--        <div class="reestablirBoto">-->
-<!--          Reestablir-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
+<ng-container *ngIf="!pujantModel; else pujantUnModel">
+  <div class="mainContainer" *ngIf="loading === 0">
+    <h1>Models passats</h1>
+    <div class="contenidorCol">
+      <div class="modelPassatMainCont" *ngFor="let model of models">
+        <div class="columnaModel" style="font-weight: 600 !important; color: #47628f">
+          Model {{ model.id }}
+        </div>
+        <div class="columnaModel">
+          {{ model.dia | date: 'dd/MM/yyyy HH:mm' }}
+        </div>
+        <div class="columnaModel">
+          <div class="columnaModel">
+            <div class="reestablirBoto" (click)="marcaSeleccionat(model.id)">
+              Reestablir
+            </div>
+          </div>
+          <div class="columnaModel">
 
-<!--  </div>-->
-<!--</div>-->
+            <mat-icon class="iconeFav">
+              {{ model.id === seleccionat ? 'favorite' : 'favorite_border' }}
+            </mat-icon>
+          </div>
+        </div>
+      </div>
 
-<!--<div *ngIf="loading !== 0">-->
-<div class="contenidorSencer">
-  <mat-spinner
-  ></mat-spinner>
-  <div class="textGeneric centraText">
-    S'estan carregant els models...
+    </div>
   </div>
-</div>
+
+  <!--<div>-->
+  <div class="contenidorSencer" *ngIf="loading !== 0">
+    <mat-spinner
+    ></mat-spinner>
+    <div class="textGeneric centraText">
+      Carregant els models...
+    </div>
+  </div>
+</ng-container>
+
+<ng-template #pujantUnModel>
+  <div class="contenidorSencer">
+    <mat-spinner
+    ></mat-spinner>
+    <div class="textGeneric centraText">
+      Espera mentre es puja el nou model...
+    </div>
+  </div>
+</ng-template>
