--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -55,6 +55,11 @@ h1 {
   padding: 16px !important;
 }
 
+.botoDefault:disabled{
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 /*color custom per la progress bar*/
 .mdc-circular-progress__determinate-circle-graphic, .mdc-circular-progress__indeterminate-circle-graphic {
   fill: rgba(0, 0, 0, 0);
@@ -63,4 +68,25 @@ h1 {
 
 .centraText {
   text-align: center;
+}
+
+
+.iconeFav{
+  margin: 10px;
+}
+
+.divisor{
+  background-color: #9DA8DE;
+  width: 100%;
+  height: 1px;
+}
+
+.contenidorSencer{
+  padding: 16px;
+  width: calc(100% - 32px);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
 }
