--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -6,6 +6,10 @@
         <mat-icon>auto_awesome</mat-icon>
         Predicció
       </div>
+      <div class="menuButton" [routerLink]="'/optimize'" routerLinkActive="active">
+        <mat-icon>insights</mat-icon>
+        Optimització
+      </div>
       <div class="menuButton" [routerLink]="'/settings'" routerLinkActive="active">
         <mat-icon>psychology</mat-icon>
         Entrenament
