--- a/webapp/src/app/optimitzacio/optimitzacio.component.html
+++ b/webapp/src/app/optimitzacio/optimitzacio.component.html
@@ -3,7 +3,7 @@
     <h1>Optimització</h1>
     <div class="divSimple">
       <div *ngIf="!ultimaPrediccio">No s'ha trobat cap predicció recent.</div>
-      <div *ngIf="ultimaPrediccio" class="optimitzacioContainers">
+      <div *ngIf="ultimaPrediccio && !prediccioFeta" class="optimitzacioContainers">
         <div class="headerDescarregaExcel">
           <p>
             Es farà una <b>optimizació d'aprovisionament</b> sobre la predicció feta el
@@ -14,7 +14,7 @@
             Descarrega Excel
           </button>
         </div>
-        <div>Introdueix els detalls sobre el dipòsit:</div>
+        <div>Introdueix les característiques del dipòsit:</div>
 
         <form [formGroup]="formGroup">
           <div class="contenidorDetalls">
@@ -48,6 +48,41 @@
         </div>
 
       </div>
+      <ng-container *ngIf="ultimaPrediccio && prediccioFeta">
+        <div class="costTotalContainer">Cost total: {{costTotal}}€</div>
+            <div class="contenidorPrediccions">
+      <div class="colPrediccions">
+        <div class="col">
+          Hora
+        </div>
+        <div class="col">
+          Bombeig durant l'hora (L)
+        </div>
+                <div class="col">
+          Consum previst (L)
+        </div>
+        <div class="col">
+          Estat del dipòsit (L)
+        </div>
+                <div class="col">
+          Estat del dipòsit (%)
+        </div>
+      </div>
+      <div class="prediccionsOverflow">
+              <ng-container *ngFor="let prediccioIndiv of optimitzacioRebuda; let i = index">
+                <div class="prediccions">
+                  <div class="col">{{ optimitzacioRebuda[i].hora }}</div>
+                  <div class="col">{{ optimitzacioRebuda[i].bombeig}}</div>
+                  <div class="col">{{ ultimaPrediccio.data[i].consum }}L</div>
+                  <div class="col">{{ optimitzacioRebuda[i].capacitat }}L</div>
+                  <div class="col">{{ (optimitzacioRebuda[i].capacitat / capacitatTotal) * 100 }}%</div>
+                </div>
+                <div class="divisor"></div>
+              </ng-container>
+      </div>
+    </div>
+
+      </ng-container>
     </div>
   </div>
 </ng-container>
