--- a/webapp/src/app/passats/models-passats.component.css
+++ b/webapp/src/app/passats/models-passats.component.css
@@ -14,7 +14,7 @@
 }
 
 .modelPassatMainCont{
-    background-color: #F5E9E9;
+    background-color: white;
     height: 80px !important;
     border-radius: 16px;
     flex-shrink: 0;
