--- a/webapp/src/app/settings/settings.component.css
+++ b/webapp/src/app/settings/settings.component.css
@@ -1,6 +1,6 @@
 .divForPrompt {
   width: 50%;
-  background-color: #F5E9E9;
+  background-color: white;
   padding: 16px;
   border-radius: 16px;
   align-items: center;
