--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 .botoDefault {
-  color: #F5E9E9 !important;
+  color: white !important;
   background-color: #9cadde !important;
   border-radius: 16px !important;
   padding: 16px !important;
