--- a/webapp/src/app/taula-prediccions/taula-prediccions.component.html
+++ b/webapp/src/app/taula-prediccions/taula-prediccions.component.html
@@ -1,60 +1,79 @@
-
 <div class="mainContainer">
   <h1>Predicció de consum</h1>
   <div class="divSimple">
     <div class="contenidorSuperior">
-<!--      <img id="image" alt="Plot Image" [class.hidden]="!loadedImage">-->
+      <!--      <img id="image" alt="Plot Image" [class.hidden]="!loadedImage">-->
       <div class="barraSlider">
         <div>
           1 dia
         </div>
-        <mat-slider min="1" max="15" step="1" showTickMarks discrete>
+        <mat-slider min="1" max="30" step="1" showTickMarks discrete style="width: 100%">
           <input matSliderThumb [(value)]="sliderValue">
         </mat-slider>
         <div>
-          15 dies
+          30 dies
         </div>
       </div>
       <button mat-button class="botoDefault" (click)="generaPrediccioDe()">Nova predicció</button>
-            <button mat-button class="botoDefault" (click)="generaExcel()">
-              <mat-icon>download</mat-icon>
-              Descarrega Excel</button>
-<!--      <canvas *ngIf="loadedImage"-->
+      <button mat-button class="botoDefault" (click)="descarregaGrafic()" *ngIf="arrayData?.length > 0">
+        <mat-icon>download</mat-icon>
+        Descarrega gràfic
+      </button>
+      <button mat-button class="botoDefault" (click)="generaExcel()" *ngIf="arrayData?.length > 0">
+        <mat-icon>download</mat-icon>
+        Descarrega Excel
+      </button>
+      <!--      <canvas *ngIf="loadedImage"-->
     </div>
-    <div class="chart">
-<canvas *ngIf="loading === 0"
- baseChart
-    [data]="lineChartData"
-    [options]="lineChartOptions"
-    [type]="lineChartType"
-    (chartHover)="chartHovered($event)"
-    (chartClick)="chartClicked($event)"
-></canvas>
-  </div>
-
-
-    <div class="contenidorPrediccions">
-      <div class="colPrediccions">
-        <div class="col">
-          Dia
-        </div>
-        <div class="col">
-          Hora
-        </div>
-        <div class="col">
-          Consum previst
-        </div>
-      </div>
-      <div class="prediccionsOverflow">
-              <ng-container *ngFor="let prediccioIndiv of arrayData; let i = index">
-                <div class="prediccions">
-                  <div class="col">{{ arrayDiaIHora[i] | date: 'dd/MM/yyyy' }}</div>
-                  <div class="col">{{ arrayDiaIHora[i] |  date: 'HH:mm'}}</div>
-                  <div class="col">{{ prediccioIndiv }}</div>
-                </div>
-                <div class="divisor"></div>
-              </ng-container>
+    <div class="contenidorSencer" *ngIf="loading !== 0">
+      <mat-spinner
+      ></mat-spinner>
+      <div class="textGeneric centraText">
+        Generant predicció...
       </div>
     </div>
+    <div class="resultatPrediccions">
+
+
+      <div class="contenidorPrediccions" *ngIf="arrayData?.length > 0">
+        <div class="colPrediccions">
+          <div class="col">
+            Dia
+          </div>
+          <div class="col">
+            Hora
+          </div>
+          <div class="col">
+            Consum previst
+          </div>
+        </div>
+        <div class="prediccionsOverflow">
+          <ng-container *ngFor="let prediccioIndiv of arrayData; let i = index">
+            <div class="divisor" *ngIf="i % 24 !== 0"></div>
+
+            <div *ngIf="i % 24 === 0" class="prediccionsFosc">
+              Dia {{ (i / 24) + 1 }}
+            </div>
+            <div class="prediccions">
+              <div class="col">{{ arrayDiaIHora[i] | date: 'dd/MM/yyyy' }}</div>
+              <div class="col">{{ arrayDiaIHora[i] |  date: 'HH:mm' }}</div>
+              <div class="col">{{ prediccioIndiv }}</div>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+      <div class="chart" *ngIf="loading === 0 && (arrayData?.length > 0)">
+        <canvas
+          baseChart
+          [data]="lineChartData"
+          [options]="lineChartOptions"
+          [type]="lineChartType"
+          (chartHover)="chartHovered($event)"
+          (chartClick)="chartClicked($event)"
+        ></canvas>
+      </div>
+    </div>
+
+
   </div>
 </div>
