--- a/webapp/src/app/taula-prediccions/taula-prediccions.component.css
+++ b/webapp/src/app/taula-prediccions/taula-prediccions.component.css
@@ -26,7 +26,6 @@ table {
   width: calc(100% - 32px);
   height: calc(100% - 82px);
   padding: 16px;
-
 }
 
 .barraSlider {
@@ -34,6 +33,8 @@ table {
   gap: 16px;
   text-align: center !important;
   align-items: center !important;
+  height: fit-content;
+  width: 40%;
 }
 
 .contenidorSuperior {
@@ -45,7 +46,7 @@ table {
   background-color: #D2DDFA;
   border-radius: 20px;
   padding: 16px;
-  width: calc(100% - 32px);
+  width: calc(50% - 32px);
   height: calc(100% - 82px);
 }
 
@@ -77,4 +78,12 @@ table {
 
 .chart{
   background-color: white;
+  width: 50%;
+  height: calc(100% - 82px);
+  align-content: center;
+}
+
+.resultatPrediccions{
+  display: flex;
+  height: 100%;
 }
