--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -85,6 +85,24 @@ h1 {
   height: 1px;
 }
 
+.divisorDia{
+  background-color: #9DA8DE;
+  width: 100%;
+  height: 3px;
+}
+
+.prediccionsFosc {
+  padding: 16px;
+  background-color: #9DA8DE;
+  color: white;
+  font-weight: 600;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  border-radius: 16px;
+}
+
+
 .contenidorSencer{
   padding: 16px;
   width: calc(100% - 32px);
